[Ticket 25111] Fix the header space of the ticket page to not wrap on the smallest screen size for the action filter. Limit KB results by product association for customer records logged in via hub.
git-svn-id: https://teamsupport.svn.beanstalkapp.com/main/trunk@4203 02885c34-e171-44ab-8435-42fb7a3c3aaf

--- a/WebApp/Resources/Pages/TicketV2.css
+++ b/WebApp/Resources/Pages/TicketV2.css
@@ -224,7 +224,7 @@
     div.ticket-badge > div > a {
         -webkit-transition: opacity .218s ease,max-width .218s step-end,visibility .218s step-end;
         transition: opacity .218s ease,max-width .218s step-end,visibility .218s step-end;
-        padding: 0 10px;
+        padding: 0 7px;
         cursor: pointer;
         color:white;
         font-size:small; 
